--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -11,6 +11,14 @@
         android:layout_height="@dimen/route_header_height"
         android:keepScreenOn="true" />
 
+    <Button
+        android:id="@+id/resume_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/route_resume_height"
+        android:layout_below="@id/routes"
+        android:text="@string/route_resume_button"
+        android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/footer"
         android:layout_width="match_parent"
@@ -18,10 +26,10 @@
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/default_padding_vertical"
         android:paddingBottom="@dimen/default_padding_vertical"
         android:paddingLeft="@dimen/default_padding_horizontal"
-        android:paddingRight="@dimen/narrow_padding_horizontal">
+        android:paddingRight="@dimen/narrow_padding_horizontal"
+        android:paddingTop="@dimen/default_padding_vertical">
 
         <TextView
             android:id="@+id/destination_name"
@@ -32,8 +40,8 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <com.mapzen.widget.DistanceView
             android:id="@+id/destination_distance"
@@ -42,8 +50,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/narrow_padding_horizontal"
             android:layout_weight="0"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/overflow_menu"
