--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="divider_height">1dp</dimen>
     <dimen name="icon_width">48dp</dimen>
     <dimen name="icon_height">48dp</dimen>
+    <dimen name="route_resume_height">50dp</dimen>
 </resources>
