--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -11,14 +11,6 @@
         android:layout_height="@dimen/route_header_height"
         android:keepScreenOn="true" />
 
-    <Button
-        android:id="@+id/resume_button"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/route_resume_height"
-        android:layout_below="@id/routes"
-        android:text="@string/route_resume_button"
-        android:visibility="gone" />
-
     <LinearLayout
         android:id="@+id/footer"
         android:layout_width="match_parent"
@@ -65,6 +57,15 @@
             android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/resume_button"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/route_resume_height"
+        android:layout_above="@id/footer"
+        android:text="@string/route_resume_button"
+        android:visibility="gone" />
+
 
     <View
         android:id="@+id/divider"
