--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="fill_horizontal"
+    android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/starting_point"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/destination"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/starting_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/destination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        </LinearLayout>
+    <ImageButton
         android:id="@+id/route_reverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="reverse route" />
+        android:background="@android:color/transparent"
+        android:contentDescription="reverse"
+        android:src="@drawable/ic_switch" />
 
 </LinearLayout>
