--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:itemTextAppearance">@style/MapzenItemTextAppearance</item>
         <item name="android:actionOverflowButtonStyle">@style/MapzenOverflow</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
+        <item name="android:textCursorDrawable">@drawable/cursor</item>
     </style>
 
     <style name="ActionBar.Solid.Mapzen" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
